fix text-align

--- a/_sass/jekyll-theme-cayman.scss
+++ b/_sass/jekyll-theme-cayman.scss
@@ -168,6 +168,7 @@ a.post-link {
 ul.fa-ul {
   overflow: auto;
   width: 250px;
+  text-align: center;
   margin-left: auto;
   margin-right: auto;
 }
